--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
 
 
-    <a-scene mindar-image="imageTargetSrc: https://cdn.glitch.global/0b9aebb9-96de-47b4-841a-2ecae68ff7b9/targets%20(1).mind?v=1689727103937;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: https://cdn.glitch.global/0b9aebb9-96de-47b4-841a-2ecae68ff7b9/targets.mind?v=1689962053630;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
