--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     
 
 
-    <a-scene mindar-image="imageTargetSrc: https://cdn.glitch.global/0b9aebb9-96de-47b4-841a-2ecae68ff7b9/targets.mind?v=1689962053630;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
+    <a-scene mindar-image="imageTargetSrc: https://cdn.glitch.global/0b9aebb9-96de-47b4-841a-2ecae68ff7b9/targets%20(2).mind?v=1689962883717;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
@@ -54,7 +54,7 @@
       <a-entity id="ram1" mindar-image-target="targetIndex: 6"></a-entity>
       <a-entity id="ram2" mindar-image-target="targetIndex: 7"></a-entity>
       <a-entity id="ventoinha" mindar-image-target="targetIndex: 8"></a-entity>
-      <a-entity id="qrcode" mindar-image-target="'TargetIndex: 9"></a-entity>
+      <a-entity id="qrcode" mindar-image-target="targetIndex: 9"></a-entity>
     </a-scene>
     <script src="script.js"></script>
   </body>
